--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "style-resources-loader": "^1.3.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.5",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@mdi/font": "^5.5.55",
+    "@mdi/js": "^5.5.55",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
