--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "date-fns": "^2.16.1",
+    "lodash": "^4.17.20",
     "register-service-worker": "^1.7.1",
     "style-resources-loader": "^1.3.3",
     "vue": "^2.6.11",
